<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activities.DetailActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="8dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/single_item_movie_image_card"
                    style="@style/CardView.Light"
                    android:layout_width="180dp"
                    android:layout_height="270dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    app:cardElevation="6dp">

                    <ImageView
                        android:id="@+id/single_item_movie_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/recycler_movie_image"
                        android:scaleType="fitXY" />


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/single_item_card_view"
                    style="@style/CardView.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:padding="8dp">

                    <LinearLayout
                        android:id="@+id/single_item_movie_details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_ripple"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/single_item_movie_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:ellipsize="end"
                            android:fontFamily="@font/opensans_semibold"
                            android:maxLength="40"
                            android:singleLine="true"
                            android:text=""
                            android:textColor="#000"
                            android:textSize="18sp" />

                        <RatingBar
                            android:id="@+id/single_item_movie_rating"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:rating="4" />

                        <TextView
                            android:id="@+id/single_item_movie_tagline"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:ellipsize="end"
                            android:fontFamily="@font/open_sans_regular"
                            android:maxLength="60"
                            android:singleLine="true"
                            android:textColor="@color/dark_gray"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/single_item_movie_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:ellipsize="end"
                            android:fontFamily="@font/open_sans_regular"
                            android:maxLength="40"
                            android:singleLine="true"
                            android:textColor="@color/dark_gray"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/single_item_movie_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:ellipsize="end"
                            android:fontFamily="@font/open_sans_regular"
                            android:maxLength="40"
                            android:singleLine="true"
                            android:textColor="@color/dark_gray"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/single_item_movie_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:ellipsize="end"
                            android:fontFamily="@font/open_sans_regular"
                            android:maxLength="60"
                            android:singleLine="true"
                            android:textColor="@color/dark_gray"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/single_item_movie_produtors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:ellipsize="end"
                            android:fontFamily="@font/open_sans_regular"
                            android:maxLength="60"
                            android:singleLine="true"
                            android:textColor="@color/dark_gray"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/single_item_movie_overview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="@font/open_sans_regular"
                            android:maxLines="10"
                            android:textColor="@color/dark_gray"
                            android:textSize="12sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/single_item_button_view"
                    style="@style/CardView.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:padding="8dp">

                    <Button
                        android:id="@+id/reviews_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="callReviews"
                        android:text="Reviews" />
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>